# nrf-ble-template

./: README.md  action.yml  app_config.h  ble.c  ble.h  meson.build
scripts/: arm-none-eabi.build  program.sh
targets/nrf52832/: meson.build
